Bug 258193 – [Intro] In RTL mode on linux go to workbench overlaps text

--- a/org.eclipse.ui.intro.universal/themes/shared/html/rtl.css
+++ b/org.eclipse.ui.intro.universal/themes/shared/html/rtl.css
@@ -53,6 +53,11 @@ table {
 	text-align: right;
 }
 
+.intro-header span {
+    margin-right : 45px;
+    padding-right : 45px;
+}
+
 div div#rss-news {  
    position:static;
    margin-left:0px;
